--- a/index.html
+++ b/index.html
@@ -162,17 +162,20 @@
   </section>
   <!-- Call to Action -->
   <section id="cta">
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
+    <h3 id="text">Find the True Love of Your Dog's Life Today.</h3>
+    <div class="footer-buttons"><button type="button" class="btn  btn-danger btn-lg">Download</button>
+      <button type="button" class="btn  btn-outline-light btn-lg">Download</button>
+  </div>
   </section>
 
 
   <!-- Footer -->
 
   <footer id="footer">
-
+    <a href=""><i  class=" social-icon fa fa-twitter"></i></a>
+    <a href=""><i class="social-icon fa fa-facebook"></i></a>
+    <a href=""><i class="social-icon fa fa-instagram"></i></a>
+    <a href=""><i class="social-icon fa fa-envelope"></i></a>
     <p>© Copyright TinDog</p>
 
   </footer>
